kubernetes_manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-python
  labels:
    app: hello-python
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      containers:
        - name: hello-python
          image: quay.io/mactynow0/hello-python:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
