kubernetes_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: hello-python
